--- a/lesson 8/laixe.html
+++ b/lesson 8/laixe.html
@@ -9,7 +9,7 @@
 </head>
 <!--  onkeydown="controllCar(event)" -->
 <body onload="initGame()">
-    <img src= "img/car.jpg">
+    <img id="img" src= "img/car.jpg">
     <table>
         <tr>
             <td></td>
