--- a/lesson 5/timkiemGoogle.html
+++ b/lesson 5/timkiemGoogle.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,25 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="https://www.google.com.vn/search"> method="GET"
+    <form action="https://www.google.com.vn/search"> "Google"
         <input type="text" name="q"/>
         <input type="submit" value="Tìm kiếm"/>
     </form>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="https://www.google.com.vn/search"> method="GET"
-        <input type="text" name="q"/>
-        <input type="submit" value="Tìm kiếm"/>
-    </form>
-</body>
->>>>>>> a36ca48f9bed27c8608229915e5334d7a0cae9d4
 </html>
