--- a/BAI TAP THUC HANH/HTML Form va Table/tkbLopT0908I.html
+++ b/BAI TAP THUC HANH/HTML Form va Table/tkbLopT0908I.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TKB lớp T0908l</title>
     <style>
         table{
             text-align: center;
@@ -23,9 +23,9 @@
                 Giáo viên:KhoaNV <br>
                 Phòng học:Class3/lab3
             </p>
-            <p style="text-align: right;">Lớp:T0908I <br>
-                Giáo viên:KhoaNV <br>
-                Phòng học:Class3/lab3
+            <p style="text-align: right;">Thời gian học <br>
+                Ngày học: <br>
+                Thứ 3,5,7
             </p>
         </caption>
         <thead>
