--- a/BAI TAP THUC HANH/HTML co ban/taoDanhsach.html
+++ b/BAI TAP THUC HANH/HTML co ban/taoDanhsach.html
@@ -27,7 +27,7 @@
             <li>Beijing</li>
             <li>Chongqing</li>
             <li>Shanghai</li>
-            <li>Tianjin/li>
+            <li>Tianjin</li>
         </ol>
     </ul>
 </body>
