--- a/BAI TAP THUC HANH/HTML Form va Table/timkiemgoogle.html
+++ b/BAI TAP THUC HANH/HTML Form va Table/timkiemgoogle.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Thẻ <form> được sử dụng để tạo một biểu mẫu HTML cho đầu vào của người dùng. -->
     <form action="https://www.google.com.vn/search"> "Google"
         <input type="text" name="q"/>
         <input type="submit" value="Tìm kiếm"/>
+        <!-- Thẻ <input> chỉ định trường đầu vào nơi người dùng có thể nhập dữ liệu. -->
     </form>
 </body>
 </html>
