--- a/BAI TAP THUC HANH/HTML co ban/taoCVcanhan.html
+++ b/BAI TAP THUC HANH/HTML co ban/taoCVcanhan.html
@@ -18,8 +18,10 @@
             <li>Dia chi: </li><p>Thua Thien Hue,Viet Nam</p>
             <li>So dien thoai: </li><p>0123456789</p>
             <li>Email: </li><p>abc@codegym.vn</p>
+            <!-- <img src="" liên kết với đường dẫn file ảnh -->
             <li>Anh: </li><img src="http://bob.codegym.vn/assets/images/Codegym-bob-RIGHTxWH200.png"
             alt="Mr. Bob" style="height:100px">
+            <!-- style="height:100px" thể hiện chiều cao của ảnh -->
             <li>Hoc van: </li><p>Dai hoc</p>
             <li>Bang cap: </li><p>Bang dai hoc</p>
             <li>Ky nang: </li><p>7/10</p>
