--- a/BAI TAP THUC HANH/HTML co ban/taoDanhsach.html
+++ b/BAI TAP THUC HANH/HTML co ban/taoDanhsach.html
@@ -7,6 +7,7 @@
     <title>Danh sach</title>
 </head>
 <body>
+    <!-- ul, li danh sách không có thứ tự -->
     <ul>
         <strong><li>Việt Nam</li></strong>
         <ol>
@@ -14,6 +15,7 @@
             <li>Sài Gòn</li>
             <li>Huế</li>
             <li>Đà Nẵng</li>
+            <!-- ol, li danh sách có thứ tự -->
         </ol>
         <strong><li>Hoa Kì</li></strong>
         <ol>
