--- a/lesson 10 Mang/index.html
+++ b/lesson 10 Mang/index.html
@@ -12,7 +12,7 @@
     <script>
         // var a = [1,2,3,4,5,6,7,8,9,10]
         // for (let i= 0; i <=a.length; i++) {
-        //     document.write(a[i] + ";");
+        //     document.write(a[i] + ",");
         // }
 
 
@@ -83,26 +83,25 @@
 
 
 
-        var size = 20;
-        var value = prompt("Enter a number:");
-        var a = [];
-        for (var i = 0; i < size; i++) {
-            a[i] = Math.floor(Math.random() * ((25 - 10 + 1) + 10));
-        }
-        let found = false;
-        document.write(a);
-        var index = -1;
-        var b = []             
-        for (var j = 0; j < size; j++) {
-            if (a[j] == value) {
-                found = true;
-                index = j;
-                b.push(index);
-            }
-        }
-        found ? document.write(`<br> có số ${value} tại vị trí ${b}`):document.write(`<br> giá trị -1`)
+        // var size = 20;
+        // var value = prompt("Enter a number:");
+        // var a = [];
+        // for (var i = 0; i < size; i++) {
+        //     a[i] = Math.floor(Math.random() * ((25 - 10 + 1) + 10));
+        // }
+        // let found = false;
+        // document.write(a);
+        // var index = -1;
+        // var b = []             
+        // for (var j = 0; j < size; j++) {
+        //     if (a[j] == value) {
+        //         found = true;
+        //         index = j;
+        //         b.push(index);
+        //     }
+        // }
+        // found ? document.write(`<br> có số ${value} tại vị trí ${b}`):document.write(`<br> giá trị -1`)
         
     </script>
 </body>
-
 </html>
