--- a/BAI TAP THUC HANH/LUYEN TAP VONG LAP 1/vonglap1den100.html
+++ b/BAI TAP THUC HANH/LUYEN TAP VONG LAP 1/vonglap1den100.html
@@ -10,12 +10,12 @@
 
 <body>
     <script>
-        for (let i = 0; i < 100; i++) {
-            if (i == 99)
-                alert("đã hoàn thành");
-            document.write(i + ' ');
+        // for (let i = 0; i < 100; i++) {    
+        //     if (i == 99)
+        //         alert("đã hoàn thành");            (bài 1: chạy số 0 đến 100)
+        //     document.write(i + ' ');
 
-        }
+        // }
     </script>
 </body>
 
