--- a/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/luyentapONHA.html
+++ b/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/luyentapONHA.html
@@ -88,24 +88,24 @@
 
         // nhập kích cở size 20, sinh số tự động từ 10 đến 25, nếu  kết quả trả về True thì số 40 ở vị trí nào
         // nếu kết quả  trả về false thì trả về giá  trị -1
-        var size = 20;
-        var value = prompt("Enter a number:");
-        var a = [];
-        for (var i = 0; i < size; i++) {
-            a[i] = Math.floor(Math.random() * ((25 - 10 + 1) + 10));
-        }
-        let found = false;
-        document.write(a);
-        var index = -1;
-        var b = []             
-        for (var j = 0; j < size; j++) {
-            if (a[j] == value) {
-                found = true;
-                index = j;
-                b.push(index);
-            }
-        }
-        found ? document.write(`<br> có số ${value} tại vị trí ${b}`):document.write(`<br> giá trị -1`)
+        // var size = 20;
+        // var value = prompt("Enter a number:");
+        // var a = [];
+        // for (var i = 0; i < size; i++) {
+        //     a[i] = Math.floor(Math.random() * ((25 - 10 + 1) + 10));
+        // }
+        // let found = false;
+        // document.write(a);
+        // var index = -1;
+        // var b = []             
+        // for (var j = 0; j < size; j++) {
+        //     if (a[j] == value) {
+        //         found = true;
+        //         index = j;
+        //         b.push(index);
+        //     }
+        // }
+        // found ? document.write(`<br> có số ${value} tại vị trí ${b}`):document.write(`<br> giá trị -1`)
         
     </script>
 </body>
