--- a/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/carosimple.html
+++ b/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/carosimple.html
@@ -18,7 +18,7 @@
         let board = [];
         let data = "";
         for (let i = 0; i < 5; i++) {
-            board[i] = new Array(0, 0, 0, 0, 0);
+            board[i] = new Array('-', '-', '-', '-', '-');
         }
 
         for (let i = 0; i < 5; i++) {
@@ -27,7 +27,6 @@
                 data += board[i][j] + "&nbsp;&nbsp;";
             }
         }
-
         data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
         b.innerHTML = data;
 
@@ -42,7 +41,47 @@
                     data += board[i][j] + "&nbsp;&nbsp;&nbsp;&nbsp;";
                 }
             }
-            
+            for (let i = 0; i < board.length; i++) {
+                for (let j = 0; j < (board.length - 2); j++) {
+                    if (i < 2) {
+                        if ((board[i][j] == "X" && board[i + 1][j + 1] == "X" && board[i + 2][j + 2] == "X")
+                            || (board[i][j] == "X" && board[i][j + 1] == "X" && board[i][j + 2] == "X")
+                            || (board[i][j] == "X" && board[i + 1][j] == "X" && board[i + 2][j] == "X")) {
+                            alert("Người chơi 1 thắng");
+                            location.reload();
+                        } else if ((board[i][j] == "O" && board[i + 1][j + 1] == "O" && board[i + 2][j + 2] == "O")
+                            || (board[i][j] == "O" && board[i][j + 1] == "O" && board[i][j + 2] == "O")
+                            || (board[i][j] == "O" && board[i + 1][j] == "O" && board[i + 2][j] == "O")) {
+                            alert("Người chơi 2 thắng");
+                            location.reload();
+                        }
+                    } else if (i > (board.length - 2)) {
+                        if ((board[i][j] == "X" && board[i][j + 1] == "X" && board[i][j + 2] == "X")
+                            || (board[i][j] == "X" && board[i - 1][j + 1] == "X" && board[i - 2][j + 2] == "X")) {
+                            alert("Người chơi 1 thắng");
+                            location.reload();
+                        } else if ((board[i][j] == "O" && board[i][j + 1] == "O" && board[i][j + 2] == "O")
+                            || (board[i][j] == "O" && board[i - 1][j + 1] == "O" && board[i - 2][j + 2] == "O")) {
+                            alert("Người chơi 2 thắng");
+                            location.reload();
+                        }
+                    } else {
+                        if ((board[i][j] == "X" && board[i + 1][j + 1] == "X" && board[i + 2][j + 2] == "X")
+                            || (board[i][j] == "X" && board[i][j + 1] == "X" && board[i][j + 2] == "X")
+                            || (board[i][j] == "X" && board[i + 1][j] == "X" && board[i + 2][j] == "X")
+                            || (board[i][j] == "X" && board[i - 1][j + 1] == "X" && board[i - 2][j + 2] == "X")) {
+                            alert("Người chơi 1 thắng");
+                            location.reload();
+                        } else if ((board[i][j] == "O" && board[i + 1][j + 1] == "O" && board[i + 2][j + 2] == "O")
+                            || (board[i][j] == "O" && board[i][j + 1] == "O" && board[i][j + 2] == "O")
+                            || (board[i][j] == "O" && board[i + 1][j] == "O" && board[i + 2][j] == "O")
+                            || (board[i][j] == "O" && board[i - 1][j + 1] == "O" && board[i - 2][j + 2] == "O")) {
+                            alert("Người chơi 2 thắng");
+                            location.reload();
+                        }
+                    }
+                }
+            }
             data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
             b.innerHTML = "<hr/>" + data;
         }
