--- a/BAI TAP THUC HANH/HAM/indexHam.html
+++ b/BAI TAP THUC HANH/HAM/indexHam.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <script>
-        function addNumbers(){
-    let firstNum = 4;
-    let secondNum = 8;
+        function addNumbers() {
+    var firstNum = 4;
+    var secondNum = 8;
     result = firstNum + secondNum;
     return result;
 }
