--- a/BAI TAP THUC HANH/LUYEN TAP MANG 1/ltMang1.html
+++ b/BAI TAP THUC HANH/LUYEN TAP MANG 1/ltMang1.html
@@ -52,16 +52,19 @@
 
         // Bài 4- Viết chương trình khởi tạo/nhập vào một mảng số nguyên và đảo ngược các phần tử trong mảng đó.
         var a = [4, 8, 12, 14, 22, 10, 9, 5, 17, 15];
-        var first = 0;
-        var last = a.length - 1;
-        while (first < last) {
-            let b = a[first];
-            a[first] = a[last];
-            a[last] = b;
-            first++;
-            last--;
-        }
+        a.reverse().join('');
         document.write(a);
+        
+        // var first = 0;
+        // var last = a.length - 1;
+        // while (first < last) {
+        //     let b = a[first];
+        //     a[first] = a[last];
+        //     a[last] = b;
+        //     first++;
+        //     last--;
+        // }
+        // document.write(a);
 
 
         // Bài 5- Viết chương trình đếm số nguyên âm trong một chuỗi
