--- a/BAI TAP THUC HANH/HAM/indexHam.html
+++ b/BAI TAP THUC HANH/HAM/indexHam.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        function addNumbers() {
-    var firstNum = 4;
-    var secondNum = 8;
-    result = firstNum + secondNum;
-    return result;
+        function myFunction(x, y) {
+  if (y === undefined) {
+    y = 2;
+  }  
+  return x * y;
 }
-result = 0;
-sum = addNumbers();
-let(result);
+document.getElementById("demo").innerHTML = myFunction(4);
+ 
+
     </script>
 </body>
+
 </html>
