--- a/BAI TAP THUC HANH/HTML co ban/theHTMLcoban.html
+++ b/BAI TAP THUC HANH/HTML co ban/theHTMLcoban.html
@@ -8,16 +8,26 @@
 </head>
 
 <body>
-    <h1>HTML: HyperText Markup Language</h1>
+    <!-- <h1>HTML: HyperText Markup Language</h1>
     <p>Tim Berners-Lee invented the first browser at CERN, to enable researchers to share their research with eachother.</p>
-    <!-- <a target="_blank" href= chỉ định liên kết từ trang này sang trang khác -->
      <a target="_blank" href= "http://home.web.cern.ch/topics/birth-web">Read more about the history of HTML
         <p>
         <img src="https://www.kasandbox.org/programming-images/misc/tim-berners-lee-webpage.png" width="300">
         <br>
         image courtesy CERN   
-        </p>
+        </p> -->
                  
+
+    <h2>HTML: HyperText Markup Language</h2>
+    <p>Tim Berners-Lee invented the first browner at CERN</p>
+    <a href="http://home.web.cern.ch/topics/birth-web" target="_blank">Read more about the history HTML</a>
+    <p>
+    <img src = "https://www.kasandbox.org/programming-images/misc/tim-berners-lee-webpage.png" width ="300">
+    <br>
+    Image countesy CERN
+    </p>
+
+    
 </a>
 </body>
 </html>
