--- a/BAI TAP THUC HANH/HTML Form va Table/simpleform.html
+++ b/BAI TAP THUC HANH/HTML Form va Table/simpleform.html
@@ -39,6 +39,8 @@
 </body>
 </html> -->
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,8 +48,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+                .wufoo {
+            font-family: "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+    <form method="get" action="simpleform.html"></form>
+    <h2>Order Form</h2>
+    <p>What would you like to buy?</p>
+    <select>
+        <option value="    ">A</option>
+        <option>B (+0.5$)</option>
+        <option>c (+0.5$)</option>
+    </select>
+    <p>How many would you like to order?</p>
+    <input type="radio"/>1 - $10<br/>
+    <input type="radio"/>1 - $20<br/>
+    <input type="radio"/>1 - $25<br/>
+    <p>Name <span style ="color: red">*</span></p>
+    <input type="text" name="firstName" placeholder="firstName" size="15" />
+    <input type="text" name="lastName" placeholder="firstName" size="15" />
+    <p>Email</p>
+    <input type ="text"/>
+    <p>Phone number</p>
+    <input type="text" name="phone1" size="5" /> -
+    <input type="text" name="phone1" size="5" /> -
+    <input type="text" name="phone1" size="5" /> -
+    <p><input type="button" name="btSumbmit" value="Submit" /></p>
 </body>
 </html>
