--- a/BAI TAP THUC HANH/HTML Form va Table/survaykhachhang.html
+++ b/BAI TAP THUC HANH/HTML Form va Table/survaykhachhang.html
@@ -35,7 +35,7 @@
         <input type="radio"> Weekly <br/>
         <input type="radio"> Monthly 
         <p><b>What would you pay for the new products?</b></p>
-        <p>$ <input type="text"> . <input type="text"></p>
+        <p>$ Dollars<input type="text"> . cents<input type="text"></p>
         <p><b>What fetures would you like to see in the new product.</b></p>
         <textarea name="" id="" cols="70" rows="10"></textarea>
         <p>Please rate your level of agreement with the following statement.</p>
