--- a/BAI TAP THUC HANH/JavaScript/bob.html
+++ b/BAI TAP THUC HANH/JavaScript/bob.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-
+var x = [1,3,5,8,2,-5,-8];
+var temp = x[x.length-1];
+x[x.length-1] = x[0];
+x[0] = temp;
+console.log(x);
     </script>
 </body>
+
 </html>
