--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/chuvivadientichhinhtron.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/chuvivadientichhinhtron.html
@@ -11,9 +11,9 @@
         let r = parseInt(prompt("Nhập bán kính đường tròn"));
         let s = r * r * 3.14
         let p = r * 2 * 3.14
-        document.write("Diện tính đường tròn: " + s);
+        document.write("Diện tính hình tròn: " + s);
         document.write("<br/>");
-        document.write("Chu vi đường tròn: " + p);
+        document.write("Chu vi hình tròn: " + p);
     </script>
 </body>
 </html>
