--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/chuyenOCsangOF.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/chuyenOCsangOF.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <script>
-        let c = parseInt(prompt("Nhập độ c"));
-        let f = (9 / 5) * c + 32
-        document.write("Độ c chuyển sang độ f: " + f);
+        var c = parseInt(prompt("nhập độ c: "));
+        var f = (9/5) * c + 32;
+        document.write('Độ c sang độ f: ' + f);
     </script>
 </body>
 </html>
