--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/khaibaobienHN.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/khaibaobienHN.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <script>
+        // (var) khai báo biến (i,f,b,s) và gán giá trị cho chúng (10, 20.5, true, Hà Nội)
         var i = 10;
         var f = 20.5;
-        var b = true;
+        var b = "true";         
         var s = "Hà Nội";
-        document.write('i = ' + i)
-        document.write('<br/>')
-        document.write('f = ' + f)
-        document.write('<br/>')
-        document.write('b = ' + b)
-        document.write('<br/>')
-        document.write('s = ' + s)
+        // document.write(); Hiển thị kết quả trên trình duyệt
+        document.write('i = ' + i);
+        document.write('<br/>');
+        document.write('f = ' + f);
+        document.write('<br/>');
+        document.write('b = ' + b);
+        document.write('<br/>');
+        document.write('s = ' + s);
     </script>
 </body>
 </html>
