--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/nhapdiemTBSINHVIEN.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/nhapdiemTBSINHVIEN.html
@@ -5,11 +5,11 @@
 </head>
 <body>
     <script>
-        let diemLy = parseInt(prompt('Nhập điểm Lý'));
-        let diemHoa = parseInt(prompt('Nhập điểm Hóa'));
-        let diemSinh = parseInt(prompt('Nhập điểm Sinh'));
-        let diemtrungbinh = (diemLy + diemHoa + diemSinh) / 3
-        let diemtong = diemLy + diemHoa + diemSinh
+        let diemLy = parseInt(prompt('Nhập điểm Lý:'));
+        let diemHoa = parseInt(prompt('Nhập điểm Hóa:'));
+        let diemSinh = parseInt(prompt('Nhập điểm Sinh:'));
+        let diemtrungbinh = (diemLy + diemHoa + diemSinh) / 3;
+        let diemtong = diemLy + diemHoa + diemSinh;
         document.write("Điểm trung bình :" + diemtrungbinh);
         document.write("<br/>");
         document.write("Điểm tổng :" + diemtong);
