--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/ungdungCaculator.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/ungdungCaculator.html
@@ -15,8 +15,8 @@
         </tr>
         <tr>
             <td>
-            <input type="number" id="num1">
-            <input type="number" id="num2">
+                <input type="number" id="num1">
+                <input type="number" id="num2">
             </td>
         </tr>
         <tr>
@@ -35,38 +35,39 @@
         </tr>
         <tr>
             <td>
-                <p id="demo">Result: </p>
+                <p id="demo">Result Division: </p>
             </td>
         </tr>
     </table>
     <script>
         function addition() {
-    var n1 = parseInt(document.getElementById('num1').value);
-    var n2 = parseInt(document.getElementById('num2').value);
-    var tong = n1 + n2;
-    document.getElementById('demo').innerHTML = ("Result Addition :" + tong);
-}
+            var n1 = parseInt(document.getElementById('num1').value);
+            var n2 = parseInt(document.getElementById('num2').value);
+            var tong = n1 + n2;
+            document.getElementById('demo').innerHTML = ("Result Addition :" + tong);
+        }
 
-function subtraction() {
-    var n1 = parseInt(document.getElementById('num1').value);
-    var n2 = parseInt(document.getElementById('num2').value);
-    var hieu = n1 - n2;
-    document.getElementById('demo').innerHTML = ("Result Subtraction :" + hieu);
-}
+        function subtraction() {
+            var n1 = parseInt(document.getElementById('num1').value);
+            var n2 = parseInt(document.getElementById('num2').value);
+            var hieu = n1 - n2;
+            document.getElementById('demo').innerHTML = ("Result Subtraction :" + hieu);
+        }
 
-function multiplication() {
-    var n1 = parseInt(document.getElementById('num1').value);
-    var n2 = parseInt(document.getElementById('num2').value);
-    var tich = n1 * n2
-    document.getElementById('demo').innerHTML = ("Result Division :" + tich);
-}
+        function multiplication() {
+            var n1 = parseInt(document.getElementById('num1').value);
+            var n2 = parseInt(document.getElementById('num2').value);
+            var tich = n1 * n2
+            document.getElementById('demo').innerHTML = ("Result Division :" + tich);
+        }
 
-function division() {
-    var n1 = parseInt(document.getElementById('num1').value);
-    var n2 = parseInt(document.getElementById('num2').value);
-    var thuong = n1 / n2;
-    document.getElementById('demo').innerHTML = ("Result Division :" + thuong);
-}
+        function division() {
+            var n1 = parseInt(document.getElementById('num1').value);
+            var n2 = parseInt(document.getElementById('num2').value);
+            var thuong = n1 / n2;
+            document.getElementById('demo').innerHTML = ("Result Division :" + thuong);
+        }
     </script>
 </body>
+
 </html>
