--- a/BAI TAP THUC HANH/JavaScript/hienthidaura.html
+++ b/BAI TAP THUC HANH/JavaScript/hienthidaura.html
@@ -7,11 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="button" onclick="showMessage();">Click Me!</button>
+    <!-- <button type="button" onclick="showMessage();">Click Me!</button>
 <script>
  function showMessage(){
-    document.write('Xin chào!');
+    console.log('Xin chào!');
  }
+</script> -->
+<button type="button" onclick="showMessage()">Click Me!</button>
+<script>
+    function showMessage() {
+        document.write('xin chào!')
+    }
 </script>
 </body>
 </html>
