--- a/BAI TAP THUC HANH/JavaScript/nhungJavascript.html
+++ b/BAI TAP THUC HANH/JavaScript/nhungJavascript.html
@@ -10,10 +10,6 @@
     <table>
     <button type="button" onclick="showMessage();">Click Me!</button>
     </table>
-  <script>
-      function showMessage () {
-    alert ('xin chào!');
-}
-  </script>
+  <script src="nhungjava.js"></script>
 </body>
 </html>
