--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/bienHINHCHUNHAT.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/bienHINHCHUNHAT.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <script>
-        var width = parseInt(prompt('width'));
-            heigth = parseInt(prompt('height'));
+        var width = parseInt(prompt('width: '));
+            heigth = parseInt(prompt('height: '));
         var area = width * heigth
-        document.write('area = ' + area)
+        document.write('area = ' + area);
     </script>
 </body>
 </html>
