--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/khaibaoBienchiahet.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/khaibaoBienchiahet.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-    var a = parseInt(prompt("nhập số a"));
-    var b = parseInt(prompt("nhập số b"));
-    if (a%b == 0)
-        document.write("a là bội số của b");
-    else
-        document.write("a không phải là bội của b");
+        var a = parseInt(prompt("nhập số a"));
+        var b = parseInt(prompt("nhập số b"));
+        if (a % b == 0)
+            alert("a là bội số của b");
+            // document.write("a là bội số của b");
+        else
+            alert("a không phải là bội số của b");
+            // document.write("a không phải là bội số của b");
     </script>
 </body>
+
 </html>
