--- a/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/toantu.html
+++ b/BAI TAP THUC HANH/Bien, Kieu du lieu va Toan tu/toantu.html
@@ -10,8 +10,10 @@
     <script>
         let inputwidht
         let inputheight
-        inputWidth = prompt("Enter the width");
-        inputheight = prompt("Enter the height");
+        // hàm prompt() lấy dữ liệu nhập vào từ người dùng
+        inputWidth = prompt("Enter the width: ");
+        inputheight = prompt("Enter the height: ");
+        // hàm parseInt() chuyển kiểu dữ liệu từ chuỗi sang số nguyên
         let width = parseInt(inputWidth);
         let height = parseInt(inputheight);
         let area = width * height;
