--- a/BAI TAP THUC HANH/HAM/indexHam.html
+++ b/BAI TAP THUC HANH/HAM/indexHam.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 
 <body>
+    <p id="demo"></p>
     <script>
-        function myFunction(x, y) {
-  if (y === undefined) {
-    y = 2;
-  }  
-  return x * y;
-}
-document.getElementById("demo").innerHTML = myFunction(4);
- 
+        var x = findMax(1, 123, 500, 115, 44, 88);
+        function findMax() {
+            let max = -Infinity;
+            for (let i = 0; i < arguments.length; i++) {
+                if (arguments[i] > max) {
+                    max = arguments[i];
+                }
+            }
+            return max;
+        }
+        document.getElementById("demo").innerHTML = findMax(1, 123, 500, 115, 44, 88);
 
     </script>
 </body>
-
 </html>
