--- a/BAI TAP THUC HANH/HAM/timGiaTriNhoNhat.html
+++ b/BAI TAP THUC HANH/HAM/timGiaTriNhoNhat.html
@@ -13,16 +13,16 @@
         function minArray(arr) {
             var min = arr[0];
             for(let i = 1; i < arr.length; i++){
-                if(arr.length == 0){
-                // if(min > arr[i]){
+                // if(arr.length == 0){
+                if(min > arr[i]){
                     min = arr[i];
                 }
             }
-            return -1;
-            // return min;
+            // return -1;
+            return min;
         }
-        var newArr = [];
-        // var newArr = [3, 5, 1, 8, -3, 7, 8];
+        // var newArr = [];
+        var newArr = [3, 5, 1, 8, -3, 7, 8];
         var minarr = alert(minArray(newArr));
     </script>
 </body>
