--- a/BAI TAP THUC HANH/HTML Form va Table/sothichcuaban.html
+++ b/BAI TAP THUC HANH/HTML Form va Table/sothichcuaban.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <form action="simpleform.html" method="GET" class="center-text">
-        <h3 style="background-color: orange;"><p style="color: aliceblue;">SỞ THÍCH CỦA BẠN</p></h3>
+        <h3 style="background-color: red;"><p style="color: aliceblue;">SỞ THÍCH CỦA BẠN</p></h3>
         <table>
             <tr>
                 <td style="color: blue;">Họ và tên</td>
