--- a/BAI TAP THUC HANH/HAM/indexHam.html
+++ b/BAI TAP THUC HANH/HAM/indexHam.html
@@ -1,37 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <p id="demo"></p>
+  <body>
+    <!-- square of <input type="text" id="input" oninput="caculate ()" /> is: <span id="result"></span> -->
+    <!-- <script> -->
+    <!-- // function square(number) {
+      //   var result = number * number;
+      //   return result;
+      // }
+
+      // function caculate() {
+      //   var input = document.getElementById("input").value;
+      //   var result = square(input);
+      //   document.getElementById("result").innerHTML = result;
+      // } -->
+
+
+
+
+    <!-- 
+    <p>Click the following button to call the function</p>
+    <form>
+      <input type="button" onclick="secondFunction()" value="Call Function">
+    </form>
+    <p>Use different parameters inside the function and then try...</p>
+
+    <script type="text/javascript">
+      function concatenate(first, last) {
+        var full;
+        full = first + last;
+        return full;
+      }
+      function secondFunction() {
+        var result;
+        result = concatenate('Zara', 'Ali');
+        document.write(result);
+      } -->
+    <!-- </script> -->
+
+
+
     <script>
-        var x = findMax(1, 123, 500, 115, 44, 88);
-        function findMax() {
-            let max = -Infinity;
-            for (let i = 0; i < arguments.length; i++) {
-                if (arguments[i] > max) {
-                    max = arguments[i];
-                }
-            }
-            return max;
-        }
-        document.getElementById("demo").innerHTML = findMax(1, 123, 500, 115, 44, 88);
+      // function square (num) {
+      //   return num * num;
+      // }
+      // var number = parseInt(prompt("enter number: "));
+      // var result = square(number);
+      // alert(`${number} binh phuong bang: ${result}`);
 
+
+
+      // let r = parseInt(prompt("nhap ban kinh: "));
+      // function dientich() {
+      //   var s = r * r * 3.14;
+      //   console.log("dien tich la: " + s);
+      // }
+      // function chuvi(){
+      //   var c = 2 * r * 3.14;
+      //   console.log("chu vi la: " + c);
+      // }
+      // dientich();
+      // chuvi();
+
+
+      // let n = parseInt(prompt("nhap n: "));
+      // function giaithua () {
+      //   var result = 1;
+      //   for (let i = 1; i < n; i++) {
+      //     result = result * i;
+      //   }
+      //   console.log(result);
+      // }
+      // giaithua();
+
+
+
+      // function sum(start, end) {
+      //   var total = 0;
+      //   for (var i = start; i <= end; i++) {
+      //     total += i;
+      //   }
+      //   return total;
+      // }
+      //   console.log("Sum from 1 to 10 is " + sum(1,
+      //     10));
+
+
+
+      // function sum() {
+      //   var total = 0;
+      //   for (var i = 1; i <= 10; i++) {
+      //     total += i;
+      //   }
+      //   return total;
+      // }
+      // document.write("Sum from 1 to 10 is " + sum(1,
+      //   10));
     </script>
-</body>
-</html>
+  </body>
+
+  </html>
