--- a/BAI TAP THUC HANH/HAM/luyentapHam1.html
+++ b/BAI TAP THUC HANH/HAM/luyentapHam1.html
@@ -12,12 +12,12 @@
     <!-- <script> -->
     <!-- // alertMessage()
         // function alertMessage () {
-        //     alert("Xin chào !!!");
+        //     alert("Xin chào !!!");                         bài 1
         // }
 
 
         // upNumber(10);
-        // function upNumber (a) {
+        // function upNumber (a) {                            bài 2
         //     a++;
         //     document.write(a);
         // }
@@ -25,13 +25,13 @@
 
         // var a = parseInt(prompt("nhập vào a: "));
         // var b = parseInt(prompt("nhập vào b: "));
-        // var c = numberMath(a,b);
+        // var c = numberMath(a,b);                            bài 3
         // var sum;
         // document.write(sum);
 
         // function numberMath (a,b) {
         //     if (a > b) {
-        //         alert("a < b mới đúng kết quả");
+        //         alert("a < b mới đúng kết quả");            bài 4
         //     } else {
         //         return sum = a + b;
         //     }
@@ -43,7 +43,7 @@
         //     firstNum = 4;
         //     secondNum = 8;
         //     result = firstNum + secondNum;
-        //     return result;
+        //     return result;                                    bài 5
         // }
         // result = 0;
         // alert(result);
