--- a/BAI TAP THUC HANH/HAM/luyentapHam1.html
+++ b/BAI TAP THUC HANH/HAM/luyentapHam1.html
@@ -9,51 +9,49 @@
 </head>
 
 <body>
-    <!-- <script> -->
-    <!-- // alertMessage()
+    <script>
+            // bài 1: tạo và gọi hàm
+        // alertMessage()
         // function alertMessage () {
-        //     alert("Xin chào !!!");                         bài 1
+        //     alert("Xin chào !!!");                         
         // }
 
 
+            // bài 2: tăng giá trị lên thêm 1
         // upNumber(10);
-        // function upNumber (a) {                            bài 2
+        // function upNumber (a) {                            
         //     a++;
         //     document.write(a);
         // }
 
 
+            // bài 3: so sánh 2 tham số và trả về tổng
         // var a = parseInt(prompt("nhập vào a: "));
         // var b = parseInt(prompt("nhập vào b: "));
-        // var c = numberMath(a,b);                            bài 3
+        // var c = numberMath(a,b);                            
         // var sum;
         // document.write(sum);
-
         // function numberMath (a,b) {
         //     if (a > b) {
-        //         alert("a < b mới đúng kết quả");            bài 4
+        //         alert("a < b mới đúng kết quả");            
         //     } else {
         //         return sum = a + b;
         //     }
         // }
 
 
-
-        // function addNumbers() {
-        //     firstNum = 4;
-        //     secondNum = 8;
-        //     result = firstNum + secondNum;
-        //     return result;                                    bài 5
-        // }
-        // result = 0;
-        // alert(result);
-        // result = addNumbers();
-        // alert(result); -->
-
-
-
-
-    <!-- </script> -->
+            //bài 4: thêm đoạn mã thích hợp để có kết quả 
+        //     function addNumbers() {
+        //         firstNum = 4;
+        //         secondNum = 8;
+        //         result = firstNum + secondNum;
+        //         return result;                                    
+        //     }
+        //     result = 0;
+        //     alert(result);
+        //     result = addNumbers();
+        //     alert(result);
+    </script>
     <table>
         <tr>
             <td>Input</td>
@@ -95,4 +93,5 @@
     
     </script>
 </body>
+
 </html>
