--- a/BAI TAP THUC HANH/LAP TRINH HUONG DOI TUONG/veCanVas.html
+++ b/BAI TAP THUC HANH/LAP TRINH HUONG DOI TUONG/veCanVas.html
@@ -10,10 +10,8 @@
 
 <body>
     <script>
-for(var x = 1; x < 8; x++)
-{
-    console.log(x);
-}
+        <canvas id="myCanvas" width="200" heiht="100" style="border: 1px solid #000000;">
+        </canvas>
     </script>
 </body>
 
