--- a/BAI TAP THUC HANH/HAM/baitap1Ham.html
+++ b/BAI TAP THUC HANH/HAM/baitap1Ham.html
@@ -10,57 +10,66 @@
 
 <body>
     <script>
-        function taoMaTran(size, min, max) {
-            let matran = [];
-            for (let i = 0; i < size; i++) {
-                let array = [];
-                for (let j = 0; j < size; j++) {
-                    array[j] = Math.floor(Math.random() * (max - min + 1) + min);
-                }
-                matran[i] = array;
-            }
-            return matran;
-        }
-        let size = + prompt("nhập kích cỡ ma trận :");
+        // hiển thị ma trận
+        let size = parseInt(prompt("nhập kích cỡ ma trận :"));
         let min = 10;
-        let max = 40;
-        document.write(`${taoMaTran()}`);
+        let max = 50;
+        function creatMatrix(arr) {
+            for (let i = 0; i < size; i++) {
+                let matrixChild = [];
+                for (let j = 0; j < size; j++) {
+                    matrixChild[j] = Math.floor(Math.random() * max) + min;
+                }
+                arr[i] = matrixChild;
+            }
+            return arr;
+        }
+        function displayMatrix(arr) {
+            for (let i = 0; i < arr.length; i++) {
+                document.write(arr[i]);
+                document.write("<br>");
+            }
+        }
+        var matran = [];
+        console.log(creatMatrix(matran));
+        var hienthi = displayMatrix(matran);
+
 
         // tính tổng số chẵn của ma trận
-        // function tinhtongSochan(arr) {
-        //     let tong = 0;
-        //     for (let i = 0; i < arr.length; i++) {
-        //         for (let j = 0; j < (arr[i].length); j++) {
-        //             if (arr[i][j] % 2 == 0) {
-        //                 tong += parseInt(arr[i][j]);
-        //             }
-        //         }
-        //     }
-        //     return tong;
-        // }
-        // console.log("tổng các số chẵn: " + tinhtongSochan(matran));
+        function tinhtongSochan(arr) {
+            let tong = 0;
+            for (let i = 0; i < arr.length; i++) {
+                for (let j = 0; j < (arr[i].length); j++) {
+                    if (arr[i][j] % 2 == 0) {
+                        tong += parseInt(arr[i][j]);
+                    }
+                }
+            }
+            return tong;
+        }
+        document.write("tổng các số chẵn: " + tinhtongSochan(matran) + ("<br>"));
 
 
         // tính tổng đường chéo chính
-        // function tinhtongDuongCheoChinh(arr) {
-        //     let tongchinh = 0;
-        //     for (let i = 0; i < arr.length; i++) {
-        //         tongchinh += arr[i][i];
-        //     }
-        //     return tongchinh;
-        // }
-        // console.log("tổng đường chéo chính: " + tinhtongDuongCheoChinh(matran));
+        function tinhtongDuongCheoChinh(arr) {
+            let tongchinh = 0;
+            for (let i = 0; i < arr.length; i++) {
+                tongchinh += arr[i][i];
+            }
+            return tongchinh;
+        }
+        document.write("tổng đường chéo chính: " + tinhtongDuongCheoChinh(matran) + ("<br>"));
 
 
         // tính tổng đường chéo phụ
-        // function tinhtongDuongCheoPhu(arr) {
-        //     let tongphu = 0;
-        //     for (let i = arr.length - 1; i >= 0; i--) {
-        //         tongphu += arr[i][arr.length - i - 1];
-        //     }
-        //     return tongphu;
-        // }
-        // console.log("tổng đường chéo phụ; " + tinhtongDuongCheoPhu(matran));
+        function tinhtongDuongCheoPhu(arr) {
+            let tongphu = 0;
+            for (let i = arr.length - 1; i >= 0; i--) {
+                tongphu += arr[i][arr.length - i - 1];
+            }
+            return tongphu;
+        }
+        document.write("tổng đường chéo phụ; " + tinhtongDuongCheoPhu(matran) + ("<br>"));
 
 
         // tính tổng đường biên
@@ -78,18 +87,6 @@
         //     return tongduongbien;
         // }
         // console.log("tổng đường biên: " + tinhtongDuongBien(matran));
-
-
-        // hiển thị ma trận
-        // function hienthiMaTran(arr) {
-        //     for (let i = 0; i < arr.length; i++) {
-        //         for (let j = 0; j < arr.length; j++) {
-        //             if (j >= i);
-        //         }
-        //         console.log(arr[i]);
-        //     }
-        // }
-
     </script>
 </body>
 
