--- a/BAI TAP THUC HANH/JavaScript/bob.html
+++ b/BAI TAP THUC HANH/JavaScript/bob.html
@@ -10,9 +10,17 @@
 
 <body>
     <script>
-for(var x = 1; x < 8; x++)
+var x = 2;
+var y = [1,2,3,4,5];
+var z = [6,7,8,9,10,11];
+
+if(y[x] + z[x-1] == z[x+2])
 {
-    console.log(x);
+    console.log('Codegym');
+}
+else
+{
+    console.log('Agilead');
 }
     </script>
 </body>
