--- a/BAI TAP THUC HANH/W3SCHOOL/index.html
+++ b/BAI TAP THUC HANH/W3SCHOOL/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <script>
-        <canvas id="myCanvas" width="200" heiht="100" style="border: 1px solid #000000;">
-        </canvas>
-    </script>
+    <h2>JavaScript setFullYear()</h2>
+<p>The setFullYear() method sets the year of a date object:</p>
+<p id="demo"></p>
+<script>
+const d = new Date();
+d.setFullYear(2020, 11, 3);
+document.getElementById("demo").innerHTML = d;
+</script>
 </body>
-
 </html>
