--- a/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/carosimple.html
+++ b/BAI TAP THUC HANH/MANG VA MANG 2 CHIEU/carosimple.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Thực hành] Tạo bàn cờ caro đơn giản</title>
+    <title>caro đơn giản</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         let board = [];
         let data = "";
         for (let i = 0; i < 5; i++) {
-            board[i] = new Array('-', '-', '-', '-', '-');
+            board[i] = new Array(0, 0, 0, 0, 0);
         }
 
         for (let i = 0; i < 5; i++) {
@@ -27,6 +27,7 @@
                 data += board[i][j] + "&nbsp;&nbsp;";
             }
         }
+
         data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
         b.innerHTML = data;
 
@@ -39,47 +40,6 @@
                 data += "<br/>";
                 for (let j = 0; j < 5; j++) {
                     data += board[i][j] + "&nbsp;&nbsp;&nbsp;&nbsp;";
-                }
-            }
-            for (let i = 0; i < board.length; i++) {
-                for (let j = 0; j < (board.length - 2); j++) {
-                    if (i < 2) {
-                        if ((board[i][j] == "X" && board[i + 1][j + 1] == "X" && board[i + 2][j + 2] == "X")
-                            || (board[i][j] == "X" && board[i][j + 1] == "X" && board[i][j + 2] == "X")
-                            || (board[i][j] == "X" && board[i + 1][j] == "X" && board[i + 2][j] == "X")) {
-                            alert("Người chơi 1 thắng");
-                            location.reload();
-                        } else if ((board[i][j] == "O" && board[i + 1][j + 1] == "O" && board[i + 2][j + 2] == "O")
-                            || (board[i][j] == "O" && board[i][j + 1] == "O" && board[i][j + 2] == "O")
-                            || (board[i][j] == "O" && board[i + 1][j] == "O" && board[i + 2][j] == "O")) {
-                            alert("Người chơi 2 thắng");
-                            location.reload();
-                        }
-                    } else if (i > (board.length - 2)) {
-                        if ((board[i][j] == "X" && board[i][j + 1] == "X" && board[i][j + 2] == "X")
-                            || (board[i][j] == "X" && board[i - 1][j + 1] == "X" && board[i - 2][j + 2] == "X")) {
-                            alert("Người chơi 1 thắng");
-                            location.reload();
-                        } else if ((board[i][j] == "O" && board[i][j + 1] == "O" && board[i][j + 2] == "O")
-                            || (board[i][j] == "O" && board[i - 1][j + 1] == "O" && board[i - 2][j + 2] == "O")) {
-                            alert("Người chơi 2 thắng");
-                            location.reload();
-                        }
-                    } else {
-                        if ((board[i][j] == "X" && board[i + 1][j + 1] == "X" && board[i + 2][j + 2] == "X")
-                            || (board[i][j] == "X" && board[i][j + 1] == "X" && board[i][j + 2] == "X")
-                            || (board[i][j] == "X" && board[i + 1][j] == "X" && board[i + 2][j] == "X")
-                            || (board[i][j] == "X" && board[i - 1][j + 1] == "X" && board[i - 2][j + 2] == "X")) {
-                            alert("Người chơi 1 thắng");
-                            location.reload();
-                        } else if ((board[i][j] == "O" && board[i + 1][j + 1] == "O" && board[i + 2][j + 2] == "O")
-                            || (board[i][j] == "O" && board[i][j + 1] == "O" && board[i][j + 2] == "O")
-                            || (board[i][j] == "O" && board[i + 1][j] == "O" && board[i + 2][j] == "O")
-                            || (board[i][j] == "O" && board[i - 1][j + 1] == "O" && board[i - 2][j + 2] == "O")) {
-                            alert("Người chơi 2 thắng");
-                            location.reload();
-                        }
-                    }
                 }
             }
             data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
